--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -445,7 +445,7 @@ Analyzing how the number of integration points $n$ and the endpoint $\rho_{n}$, 
 Utilizing Jacobi's method on scaled differential equations have proven to be a powerful tool for classical and quantum mechanics problems alike. When reviewing numerical accuracy of the method  compared to the analytic results given in \cite{2}, it gives results accurate down to at least 8 significant figures. This result is unique for Toepliz matrices, meaning for other tridiagonal matrices like the ones in the quantum mechanis part of this paper the numerical precision is no longer as high compared to analytical results. However in comparison to other methods it is quite demanding as the number of iterations increases along a quadratic dependency of $n$ [fig: \ref{fig:fig1}], the size of the matrix. In addition the method increases quite fast in CPU-time meaning that the method will not be very versatile if one would need a large $n$. Already at $n = 400$ the CPU time passes $30$ seconds, where Armadillo's method for solving an eigenvalue problem has a CPU time of less than a second.
 
 \subsection{Quantum dots, one electron}
-Studying a case of one electron by adding a quantum harmonic oscillator potential to our tridiagonal matrix. The numerical precision from applying Jacobi's method to Toepliz matrix, is reduced under the now more complex tridiagonal matrix. To achieve four leading digits it becomes necessary to increase matrix size to $n = 380$. This is a result of probability function calculated for the ground state energy, which now requires a stable balance between interval size $\rho$ and matrix size $n$. As seen in [fig:\ref{fig:fig2}] the interval size $\rho$ governs our approximation of infinity in the potential, however letting this interval increase requi
+Studying a case of one electron by adding a quantum harmonic oscillator potential to our tridiagonal matrix. The numerical precision from applying Jacobi's method to Toepliz matrix, is reduced under the now more complex tridiagonal matrix. To achieve four leading digits it becomes necessary to increase matrix size to $n = 380$. This is a result of probability function calculated for the ground state energy, which now requires a stable balance between interval size $\rho$ and matrix size $n$. As seen in [fig:\ref{fig:fig2}] the interval size $\rho$ governs our approximation of infinity in the potential, however letting this interval increase requires that matrix size increases along with the 
 
 \subsection{Quantum dots, two electrons}
 
