Lacks final statement in abstract and conclusion. Also needs proof reading

--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -465,7 +465,7 @@ By scaling the equations we have reduced a 3 dimensional two body problem to a a
 \label{fig:fig5}
 \end{figure}
 %
-Reviewing [fig:\ref{fig:fig4}] it is clear that increasing $\omega_{r}$ in turn makes the potential become increasingly confined as explained with [fig\ref{fig:fig5}], this is seen on the location of the probability function in the plot. Removing the Coulomb potential has the same effect as confining the electrons in a very strong potential since the significance between interaction with the potential and between the electrons is reduced.
+Reviewing [fig:\ref{fig:fig4}] it is clear that increasing $\omega_{r}$ in turn makes the potential become increasingly confined as explained with [fig:\ref{fig:fig5}], this is seen on the location of the probability function in the plot. Removing the Coulomb potential has the same effect as confining the electrons in a very strong potential since the significance between interaction with the potential and between the electrons is reduced.
 %
 \subsection{Comments}
 This has been an educational project, and to complete it we have been forced to improve in both C++ and implementation in general. There is also room for gaining more intuition into quantum mechanical systems. However while trying to write a good abstract and conclusion we find this project lacking in clear goals.
